--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.57"
+bmp = "0.5.0"
 byteorder = "1.4.3"
 hexyl = "0.10.0"
 nom = "7.1.1"
+rgb = "0.8.32"
 tribool = "0.3.0"
